# lineno

./: .envrc  Cargo.toml  README.md  file.txt  flake.nix
.github/workflows/: ci.yaml
nix/: devshell.nix
nix/lib/: default.nix
src/: lib.rs  main.rs
tests/: cli.rs  rocket.txt
